# homelab-k12n-gitops

./: .cursorrules  .gitignore  CLAUDE.md  DEPLOYMENT_PLAN.md  MIGRATION_PLAN.md  MIGRATION_QUICK_START.md  MONOREPO_MIGRATION_PLAN.md  Makefile  README.md  authelia-migration-brief.md  catalog-info.yaml  create-materialized-views-job.yaml  flux-state-backup.yaml  flux.yaml  vision_strategi_beslutsramverk.md
applications/energy-ws/: .gitignore  Cargo.toml  Dockerfile  README.md  mkdocs.yml
applications/energy-ws/.cargo/: config.toml
applications/energy-ws/config/: config.example.yaml
applications/energy-ws/docs/: development.md  index.md  usage.md
applications/energy-ws/src/: config.rs  error.rs  lib.rs  main.rs
applications/energy-ws/src/auth/: jwt.rs  mod.rs
applications/energy-ws/src/kafka/: consumer.rs  mod.rs
applications/energy-ws/src/ws/: connection.rs  handler.rs  mod.rs  protocol.rs
applications/energy-ws/tests/: end_to_end_test.rs  integration_test.rs
applications/heatpump-api/: .gitignore  Cargo.toml  Dockerfile  README.md  README_TESTING.md  TESTING.md  docker-compose.test.yml  run-tests.sh
applications/heatpump-api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs
applications/heatpump-api/src/handlers/: heatpump.rs  mod.rs
applications/heatpump-api/src/models/: heatpump.rs
applications/heatpump-api/src/repositories/: heatpump.rs
applications/heatpump-api/src/services/: heatpump.rs
applications/heatpump-api/tests/: integration_test.rs  test_helpers.rs
applications/heatpump-settings-api/: .dockerignore  Cargo.toml  Dockerfile
applications/heatpump-settings-api/.cargo/: audit.toml  config.toml
applications/heatpump-settings-api/config/: config.yaml
applications/heatpump-settings-api/src/: config.rs  error.rs  main.rs
applications/heatpump-settings-api/src/api/: routes.rs
applications/heatpump-settings-api/src/auth/: jwt.rs  middleware.rs
applications/heatpump-settings-api/src/kafka/: consumer.rs  mod.rs
applications/heatpump-settings-api/src/repositories/: mod.rs  outbox.rs  settings.rs
applications/heatpump-settings-outbox-processor/: .dockerignore  Cargo.toml  Dockerfile
applications/heatpump-settings-outbox-processor/src/: config.rs  db.rs  kafka.rs  main.rs  outbox.rs
applications/heatpump-web-leptos/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Trunk.toml  env-config.js.template  index.html  nginx.conf
applications/heatpump-web-leptos/public/: env-config.js
applications/heatpump-web-leptos/src/: app.rs  lib.rs
applications/heatpump-web-leptos/src/api/: client.rs  energy.rs  heatpump.rs  mod.rs  outbox.rs  settings.rs  temperature.rs
applications/heatpump-web-leptos/src/auth/: mod.rs  oauth.rs  storage.rs
applications/heatpump-web-leptos/src/components/: layout.rs  mod.rs
applications/heatpump-web-leptos/src/models/: energy.rs  heatpump.rs  mod.rs  (+3 more)
applications/heatpump-web-leptos/style/: main.css
applications/homelab-api/: .dockerignore  Cargo.toml  Dockerfile  audit.toml  mkdocs.yml
applications/homelab-api/config/: config.yaml
applications/homelab-api/docs/: api.md  architecture.md  development.md  index.md
applications/homelab-api/src/: config.rs  error.rs  lib.rs  main.rs
applications/homelab-api/tests/: mcp_integration_test.rs
applications/homelab-chat-api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
applications/homelab-chat-api/tests/: conftest.py  test_agent_loop.py  test_auth.py  test_mcp_client.py
applications/mqtt-to-timescale/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
applications/mqtt-to-timescale/config/: config.example.yaml
applications/mqtt-to-timescale/migrations/: 001_init_telemetry.sql
applications/mqtt-to-timescale/src/: config.rs  db.rs  error.rs  ingest.rs  lib.rs  main.rs  mapping.rs  mqtt.rs
applications/redpanda-sink/: Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.test.yml  verify_chunk2.sh
applications/redpanda-sink/config/: config.example.yaml  config.test.yaml
applications/redpanda-sink/src/: config.rs  db.rs  error.rs  ingest.rs  lib.rs  main.rs  mapping.rs  redpanda.rs
applications/redpanda-sink/tests/: README.md  api_consumer_integration_test.rs  api_test.rs  auth_integration_test.rs  end_to_end_test.rs  integration_test.rs  main_integration_test.rs  repository_test.rs
applications/spotprice-api/: Cargo.toml  Dockerfile
applications/spotprice-api/config/: config.yaml
applications/spotprice-api/src/: apns.rs  config.rs  db.rs  error.rs  fetcher.rs  main.rs  nordpool.rs
rag-k8s/: .env.example  .gitignore  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  logging.yaml  pyproject.toml
rag-k8s/agent/: __init__.py  config.py  plan.py  retrieve.py  server.py  tool.py
rag-k8s/benchmark/: bench_models.py  build_prompts.py  convert_13b.sh  deployments.tsv  eval_runner.py  models.yaml  prompts.json  statefulsets.tsv
rag-k8s/cards/: cordon-node.yaml  describe-deployment.yaml  diagnose-crashloop.yaml  diagnose-imagepullbackoff.yaml  drain-node.yaml  flux-get-kustomizations.yaml  flux-reconcile-kustomization.yaml  flux-resume-kustomization.yaml  flux-suspend-kustomization.yaml  get-events.yaml  get-namespaces.yaml  gh-pr-list.yaml  gh-pr-view.yaml  gh-run-list.yaml  gh-run-view.yaml  gh-run-watch.yaml  gh-workflow-view.yaml  investigate-stuck-rollout.yaml  job-restart.yaml  logs-deployment-selector.yaml  logs-pod.yaml  restart-deployment.yaml  rollout-status.yaml  scale-deployment.yaml  top-nodes.yaml  top-pods.yaml  uncordon-node.yaml  view-configmap.yaml
rag-k8s/docs/: CLAUDE_INTEGRATION.md  corpus-schema.md  performance.md  prompts.md  security.md
rag-k8s/examples/: claude-tool-call.json
rag-k8s/index/: build_index.py  search.py
rag-k8s/org/: enums.yaml  label-conventions.yaml  namespaces.yaml  rbac-allowlist.yaml  schema.yaml
rag-k8s/runtime/: __init__.py  exec.py  logging.py  validate.py
rag-k8s/scripts/: bootstrap.sh  demo_restart.sh  start-server.sh
rag-k8s/tests/: __init__.py  test_exec.py  test_index.py  test_plan.py  test_retrieve.py  test_validate.py
(+953 files in other folders)
