[package]
name = "energy-ws"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "energy-ws"
path = "src/main.rs"

[dependencies]
# Web framework with WebSocket support
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JWT authentication
jsonwebtoken = "9.2"
alcoholic_jwt = "4.1"  # For JWKS validation
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
shellexpand = "3.0"
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
serial_test = "3.0"
tokio-test = "0.4"
