[package]
name = "heatpump-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "migrate"] }
mockall = "0.13"
tokio-test = "0.4"
rand = "0.8"
