[package]
name = "heatpump-settings-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "macros"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Config
config = "0.14"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
