[package]
name = "homelab-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "macros"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.8", features = ["macros", "query"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.2"
alcoholic_jwt = "4091.0"  # For JWKS validation
reqwest = { version = "0.12", features = ["json"] }
bcrypt = "0.15"
tokio-stream = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
axum-test = "18.0"
