[package]
name = "mqtt-to-timescale"
version = "0.1.0"
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jsonpath_lib = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4"
