[package]
name = "spotprice-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "macros"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.8", features = ["macros", "query"] }
tower-http = { version = "0.5", features = ["trace"] }
jsonwebtoken = "9.2"  # Pure-Rust JWKS/RS256 validation (ring backend)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
axum-test = "18.0"
